# Secrets-Tray

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
scripts/: build.sh  common.sh  install.sh  uninstall.sh
src/: main.cpp
src/ui/: SecurePasswordDialog.cpp  SecurePasswordDialog.h
